Finished ouput parser

--- a/parser_test.ipynb
+++ b/parser_test.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -305,19 +306,20 @@
        "[1408 rows x 9 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import the count table\n",
     "count_table = pd.read_csv(\"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/feature-table.tsv\", sep=\"\\t\", header=0, index_col=0)\n",
     "count_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -416,12 +418,13 @@
        "[1408 rows x 1 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import the taxonomy table\n",
     "taxonomy_table = pd.read_csv(\n",
     "    \"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/taxonomy-table.tsv\",\n",
     "    sep=\"\\t\",\n",
@@ -433,11 +436,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_index_dict(df):\n",
+    "    \"\"\"\n",
+    "    Creates a dictionary mapping old index values to new index values of a pandas DataFrame.\n",
+    "    \n",
+    "\n",
+    "    The new index values are generated as \"seq_\" followed by a zero-padded\n",
+    "    integer corresponding to the row position (1-indexed).\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "        df (pandas.DataFrame): Input DataFrame.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "        dict: Dictionary mapping old index values to new index values.\n",
+    "\n",
+    "    Example:\n",
+    "        >>> df = pd.DataFrame({'A': [1, 2, 3]})\n",
+    "        >>> index_map = create_index_dict(df)\n",
+    "        >>> print(index_map)\n",
+    "        {0: 'seq_001', 1: 'seq_002', 2: 'seq_003'}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    import pandas as pd\n",
+    "    \n",
     "    max_rows = len(df)\n",
     "    max_digits = len(str(max_rows))\n",
     "    old_to_new_index_map = {}\n",
@@ -449,16 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Map new and old index values\n",
     "id_map = create_index_dict(count_table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -713,19 +741,20 @@
        "[1408 rows x 9 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rename the index of the count table\n",
     "count_table = count_table.rename(index=id_map)\n",
     "count_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -824,19 +853,20 @@
        "[1408 rows x 1 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rename the index of the taxonomy table\n",
     "taxonomy_table = taxonomy_table.rename(index=id_map)\n",
     "taxonomy_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -1054,12 +1084,13 @@
        "[1408 rows x 8 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Format the taxonomy string in the taxonomy table\n",
     "taxonomy_table[\"lineage\"] = taxonomy_table[\"lineage\"].str.replace(\"\\\\w__\", \"\", regex=True)\n",
     "taxonomy_table = taxonomy_table[\"lineage\"].str.split(\";\", expand=True)\n",
     "taxonomy_table.columns = [\"Root\", \"Kingdom\", \"Phylum\", \"Class\", \"Order\", \"Family\", \"Genus\", \"Species\"]\n",
@@ -1068,16 +1099,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export the taxonomy table\n",
     "taxonomy_table.to_csv(\n",
     "    \"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/taxonomy_table_parsed.tsv\",\n",
     "    sep=\"\\t\",\n",
     "    header=True,\n",
     "    index=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the count table\n",
+    "count_table.to_csv(\n",
+    "    \"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/count_table_parsed.tsv\",\n",
+    "    sep=\"\\t\",\n",
+    "    header=True,\n",
+    "    index=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write the JSON string to a file\n",
+    "with open(\"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/id_map.json\", \"w\") as f:\n",
+    "    f.write(json.dumps(id_map))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_fasta(fasta_in, fasta_out, id_map):\n",
+    "    \"\"\"\n",
+    "    Parse a FASTA file, change its heeaders based on a dictionary \n",
+    "    mapping old index values to new index values, \n",
+    "    and sort the sequences alphabetically based on their headers.\n",
+    "\n",
+    "    Parameters  \n",
+    "    ---------- \n",
+    "        fasta_in (str): The path to the input FASTA file.\n",
+    "        fasta_out (str): The path to the output FASTA file.\n",
+    "        id_map (dict): A dictionary mapping old header to new headers.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(fasta_in, \"r\") as fasta:\n",
+    "        # The recurrent use of .strip() avoids trailing newlines and spaces problems.\n",
+    "        parsed_fasta = []\n",
+    "        for line in fasta:\n",
+    "            if line.startswith(\">\"):\n",
+    "                seq_id = line.replace(\">\", \"\").strip()\n",
+    "                parsed_fasta.append(id_map[seq_id])\n",
+    "            else:\n",
+    "                parsed_fasta.append(line.upper().strip()) # Make sure the sequence is uppercase\n",
+    "\n",
+    "    def sort_fasta(fasta_list):\n",
+    "        \"\"\"\n",
+    "        This is a helper function that sorts the fasta file based on the headers.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        fasta_list : list\n",
+    "            A list of strings representing the fasta file.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        sorted_fasta : Pandas DataFrame\n",
+    "            A pandas DataFrame mapping headers to sequences.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        import pandas as pd\n",
+    "\n",
+    "        sorted_fasta = pd.DataFrame.from_dict(dict(zip(fasta_list[::2], fasta_list[1::2])), \"index\")\n",
+    "        sorted_fasta.sort_index(inplace=True)\n",
+    "\n",
+    "        return sorted_fasta\n",
+    "\n",
+    "    # Sort the parsed fasta\n",
+    "    sorted_fasta = sort_fasta(parsed_fasta)\n",
+    "\n",
+    "    # Transform to a dict and write the fasta file\n",
+    "    output = sorted_fasta.to_dict()[0]\n",
+    "    with open(fasta_out, \"w\") as f:\n",
+    "        for seq_id, seq in output.items():\n",
+    "            f.write(f\">{seq_id}\\n{seq}\\n\")\n",
+    "\n",
+    "    # Return the sorted fasta DataFrame\n",
+    "    return sorted_fasta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_seq_table(fasta_df, id_map):\n",
+    "    \"\"\"\n",
+    "    Constructs a sequence table from a DataFrame of FASTA sequences and an ID mapping.\n",
+    "\n",
+    "    This function takes a DataFrame containing FASTA sequences and a dictionary\n",
+    "    mapping new sequence IDs to their original IDs. It creates a new DataFrame\n",
+    "    with two columns: 'Origin', which contains the original sequence IDs, and\n",
+    "    'Sequence', which contains the corresponding sequences.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    fasta_df : pandas.DataFrame\n",
+    "        A DataFrame where each row represents a sequence with its ID as the index.\n",
+    "    id_map : dict\n",
+    "        A dictionary mapping new sequence IDs to original sequence IDs.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pandas.DataFrame\n",
+    "        A DataFrame with 'Origin' and 'Sequence' columns, mapping original IDs\n",
+    "        to their respective sequences.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    import pandas as pd\n",
+    "\n",
+    "    # Make a deep copy to avoid modifying the original DataFrame\n",
+    "    sequence_table = fasta_df.copy(deep=True)\n",
+    "    # Rename index column and sequence column\n",
+    "    sequence_table.index.names = [\"ID\"]\n",
+    "    sequence_table.columns = [\"Sequence\"]\n",
+    "\n",
+    "    # Invert the id_mapping so it accepts the simplified ID as key\n",
+    "    inv_map = {v: k for k, v in id_map.items()}\n",
+    "\n",
+    "    # Add the original ID to the sequence table\n",
+    "    sequence_table[\"Origin\"] = [inv_map[header] for header in fasta_df.index]\n",
+    "    # Reorder the columns\n",
+    "    sequence_table = sequence_table[[\"Origin\", \"Sequence\"]]\n",
+    "\n",
+    "    return sequence_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fasta_in = \"/home/jose.gomez/Projects/16S_completo/test/orina/output/templates.fasta\"\n",
+    "fasta_out = (\n",
+    "    \"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/templates_parsed.fasta\"\n",
+    ")\n",
+    "outfile = \"/home/jose.gomez/Projects/16S_completo/test/orina/RESDIR/sequence_table.tsv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsed_fasta_df = parse_fasta(fasta_in, fasta_out, id_map)\n",
+    "sequence_table = build_seq_table(parsed_fasta_df, id_map)\n",
+    "sequence_table.to_csv(outfile, sep=\"\\t\", header=True, index=True)"
    ]
   }
  ],
